--- a/index.html
+++ b/index.html
@@ -17,13 +17,18 @@
 <script>
 $.fcup({
 	updom: '.fcup',//上传控件的位置dom
+	//upid: 'upid',//上传的文件表单id，有默认
 	shardsize : '0.5',//切片大小,(单次上传最大值)单位M，默认2M
 	upstr: '上传文件',//按钮文字
 	uploading: '上传中...',//上传中的提示文字
 	upfinished: '上传完成',//上传完成后的提示文字
 	upurl: './file.php',//文件上传接口
-	uptype: 'jpg,png,gif,jpeg',//上传类型检测,用,号分割
+	//uptype: 'jpg,png,gif,jpeg',//上传类型检测,用,号分割
 	errtype: '不支持此类型文件',//不支持类型的提示文字
+	//接口返回结果回调
+	upcallback : function(result){
+	     console.log(result);
+	}
 });
 </script>
 </body>
