--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ $.fcup({
 	upstr: '上传文件',//按钮文字
 	uploading: '上传中...',//上传中的提示文字
 	upfinished: '上传完成',//上传完成后的提示文字
-	upurl: './file.php',//文件上传接口
+	upurl: './php/file.php',//文件上传接口 node接口:http://127.0.0.1:8888/upload
 	//uptype: 'jpg,png,gif,jpeg',//上传类型检测,用,号分割
 	errtype: '不支持此类型文件',//不支持类型的提示文字
 	//接口返回结果回调
