添加了文件大小的判断,添加了对于文件md5的计算,添加了终止函数,传值到后台使用,优化细节部分

--- a/index.html
+++ b/index.html
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>jquery文件分段上传插件-fcup</title>
-  <!-- 引入css -->
-  <link href="./fcup/css/style.css" rel="stylesheet" />
-</head>
-<body>
-<div class="fcup"></div>
-</body>
-
-<script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
-<!--  引入js  -->
-<script src="./fcup/js/jquery.fcup.min.js"></script>
-
-<script>
+ <head> 
+  <meta charset="utf-8" /> 
+  <title>jquery文件分段上传插件-fcup</title> 
+  <!-- 引入css --> 
+  <link href="./fcup/css/style.css" rel="stylesheet" /> 
+ </head> 
+ <body> 
+  <div class="fcup"></div>  
+  <script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script> 
+  <!--  引入js  --> 
+  <script src="./fcup/js/jquery.fcup.js"></script> 
+  <script>
 $.fcup({
-	updom: '.fcup',//上传控件的位置dom
+    updom: '.fcup',//上传控件的位置dom		
 	//upid: 'upid',//上传的文件表单id，有默认
-	shardsize : '0.5',//切片大小,(单次上传最大值)单位M，默认2M
+	shardsize: '2',//切片大小,(单次上传最大值)单位M，默认2M
+	upmaxsize : '1024',//上传文件大小,单位M，不设置不限制
 	upstr: '上传文件',//按钮文字
 	uploading: '上传中...',//上传中的提示文字
-	upfinished: '上传完成',//上传完成后的提示文字
+    upfinished: '上传完成',//上传完成后的提示文字
 	upurl: './php/file.php',//文件上传接口 node接口:http://127.0.0.1:8888/upload
-	//uptype: 'jpg,png,gif,jpeg',//上传类型检测,用,号分割
-	errtype: '不支持此类型文件',//不支持类型的提示文字
+	//uptype: 'mp4',//上传类型检测,用,号分割
+    errmaxup: '上传文件过大',//检测文件是否超出设置上传大小
+	errtype: '请上传mp4文件',//不支持类型的提示文字
 	//接口返回结果回调
 	upcallback : function(result){
 	     console.log(result);
+		 /*
+		 if (result !== 'success') {
+			$.fcupStop('出现错误');//终止运行,并且在按钮上显示内容
+		 }	
+         */		 
+		  
 	}
 });
-</script>
-</body>
+</script>  
+ </body>
 </html>
