同步gitee.com(码云)的更新

--- a/default.html
+++ b/default.html
@@ -89,9 +89,17 @@
 
             // 接口返回错误
             if (status == 0) {
-               // 停止上传并且提示信息
-               $.upStop(msg);
+               // 停止上传触发$.upStop函数
+               $.upErrorMsg(msg);
             }
+            
+            // 已经上传过了
+            if (status == 3) {
+               Progress(100);
+               $('#pic').attr("src", url);
+               $('#pic').show();               
+               $.upErrorMsg(msg);
+            }            
          },
 
          // 上传过程监听，可以根据当前执行的进度值来改变进度条
