--- a/old.html
+++ b/old.html
@@ -258,8 +258,18 @@
                 // 接口返回错误
                 if (status == 0) {
                     // 停止上传并且提示信息
-                    $.upStop(msg);
+                    $.upErrorMsg(msg);
                 }
+                
+                // 已经上传过了
+                if (status == 3) {
+                    var controlButton = jQuery('.fcup-button');
+                    controlButton.fcupSet(100); 
+                    $('#pic').attr("src", url);
+                    $('#pic').show();                    
+                    $.upErrorMsg(msg);
+                }                
+                
             },
 
             // 上传过程监听，可以根据当前执行的进度值来改变进度条
