更新了文字

--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
                <strong>更新说明</strong>
             </div>
             <ul class="list-group">
-               <li> 2018/01/08 ： 添加了对于接口返回结果的回调，添加了对于上传表单id的指定</li>
-               <li> 2018/01/17 : 优化了分片异步处理,队列执行接口,修复细节 </li>
                <li> 2018/05/02 : 添加了文件大小的判断,添加了对于文件md5的计算,添加了终止函数,传值到后台使用,优化细节部分 </li>
                <li> 2019/05/21 ： 分离了原来的进度动画，现在用户可以自定义自己的动画和按钮，分别提供了各种回调事件以便处理 </li>
+               <li> 2019/8/12  : 修复了获取md5值的bug，感谢Matty的提醒</li>
+               <li> 2019/10/22 : 修改了终止事件循环执行的bug</li>
             </ul>
          </div>
       </div>
